--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-hot-toast": "^2.4.1",
     "react-modern-drawer": "^1.2.0",
     "router": "^1.3.8",
+    "Router": "^2.1.0",
     "stripe": "^12.13.0",
     "swr": "^2.2.0",
     "tailwindcss": "3.3.2",
